# netsentinel11

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_RELEASE_NOTES.md  README.md  RELEASE_CANDIDATE_CHECKLIST.md  RELEASE_TEST_GUIDE.md  SECURITY.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: windows-build.yml
docs/: ACCESSIBILITY_LOCALIZATION_LOW_RESOURCE.md  AGENT_COLLECTOR_PROTOCOL.md  BUILD_FROM_SOURCE.md  DEPENDENCY_POLICY.md  END_TO_END_SIMULATION_SUITE.md  FINAL_ACCEPTANCE_AUDIT_GUIDE.md  GITHUB_TOPICS.md  LOCAL_REST_API_SECURITY.md  OUI_DATA_LICENSES.md  PRIVACY_REVIEW.md  PRIVACY_THREAT_MODEL.md  PRODUCT_GAP_AUDIT.md  PROFESSIONAL_WORKSPACE_LOCAL_FIRST.md  RELEASE_CANDIDATE_POLISH.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_PACKAGING.md  ROADMAP.md  THREAT_MODEL.md  WINDOWS_SERVICE_TRAY_HARDENING.md
i18n/: en-US.txt
packaging/windows/: Product.wxs.in  README.md  build_wix.ps1  msix_manifest_template.xml
scripts/: build_windows_ci.ps1  package_installer_release.ps1  package_portable_release.ps1  validate_gui_window_automation.ps1  validate_release_gui.ps1
src/alerts/: CMakeLists.txt
src/alerts/include/netsentinel/alerts/: alert_router.h
src/alerts/src/: alert_router_stub.cpp
src/api/: CMakeLists.txt  README.md
src/api/include/netsentinel/api/: acceptance_audit.h  agent_collector_protocol.h  local_rest_api.h  privacy_policy.h  professional_workspace.h  simulation_suite.h
src/api/src/: acceptance_audit.cpp  agent_collector_protocol.cpp  local_rest_api.cpp  privacy_policy.cpp  professional_workspace.cpp  simulation_suite.cpp
src/app/: CMakeLists.txt  main.cpp  safety_contract.cpp  safety_contract.h
src/bandwidth/: CMakeLists.txt
src/bandwidth/include/netsentinel/bandwidth/: bandwidth_source.h
src/bandwidth/src/: bandwidth_source.cpp
src/diagnostics/: CMakeLists.txt  README.md
src/diagnostics/include/netsentinel/diagnostics/: diagnostic_tools.h
src/diagnostics/src/: diagnostic_tools_stub.cpp
src/engine_cpp/: CMakeLists.txt  README.md
src/engine_cpp/include/netsentinel/engine/: adapter_inventory.h  arp_discovery.h  device_merge.h  domain_model.h  error_model.h  fingerprint_engine_v1.h  hostname_resolution.h  icmp_discovery.h  logger.h  mdns_discovery.h  netbios_discovery.h  netcore_boundary.h  oui_vendor.h  scan_contract.h  scan_scope.h  snmp_read_only_discovery.h  ssdp_discovery.h  tcp_discovery.h
src/engine_cpp/src/: adapter_inventory.cpp  arp_discovery.cpp  device_merge.cpp  domain_model.cpp  error_model.cpp  fingerprint_engine_v1.cpp  fingerprint_rules_v1.json  hostname_resolution.cpp  icmp_discovery.cpp  logger.cpp  mdns_discovery.cpp  netbios_discovery.cpp  netcore_boundary.cpp  oui_vendor.cpp  scan_contract.cpp  scan_scope.cpp  snmp_read_only_discovery.cpp  ssdp_discovery.cpp  tcp_discovery.cpp
src/hardening/: CMakeLists.txt
src/hardening/include/netsentinel/hardening/: hardening.h
src/hardening/src/: hardening.cpp
src/installer/: CMakeLists.txt
src/installer/include/netsentinel/installer/: installer_plan.h
src/installer/src/: installer_plan.cpp
src/netcore_c/: CMakeLists.txt  README.md
src/netcore_c/include/netsentinel/netcore/: adapter_inventory.h  arp_discovery.h  netcore_boundary.h  version.h
src/netcore_c/src/: adapter_inventory.c  arp_discovery.c  netcore_boundary.c  version.c
src/outage/: CMakeLists.txt
src/outage/include/netsentinel/outage/: outage_detector.h
src/outage/src/: outage_detector_stub.cpp
src/reports/: CMakeLists.txt  README.md
src/reports/include/netsentinel/reports/: report_generator.h
src/reports/src/: report_generator.cpp
src/security/: CMakeLists.txt  README.md
src/service/: CMakeLists.txt  README.md
src/service/include/netsentinel/service/: tray_service.h
src/service/src/: tray_service_stub.cpp
src/speed_test/: CMakeLists.txt
src/speed_test/include/netsentinel/speedtest/: speed_test.h
src/speed_test/src/: speed_test_stub.cpp
src/storage/: CMakeLists.txt  README.md
src/storage/include/netsentinel/storage/: storage.h
src/storage/src/: storage.cpp
src/ui/: CMakeLists.txt  README.md
src/ui/include/netsentinel/ui/: gui_shell.h
src/ui/src/: gui_shell.cpp  qt_gui_main.cpp
