cmake_minimum_required(VERSION 3.24)

project(netsentinel11
    VERSION 0.1.0
    DESCRIPTION "NetSentinel11 - Windows 11 local network visibility, monitoring, and safety-first tooling"
    LANGUAGES C CXX
)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

if(NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")
    message(WARNING "This repo targets Windows 11 and may not build on this host.")
endif()

if(NOT CMAKE_GENERATOR MATCHES "Visual Studio")
    message(WARNING "MSVC 2022 (Visual Studio 17 2022) is preferred for this stage.")
endif()

if(MSVC)
    add_compile_options(/W4 /permissive- /EHsc)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

option(NETSENTINEL_ENABLE_SQLITE "Build storage module with SQLite integration if available." ON)
option(NETSENTINEL_ENABLE_REST "Build local REST API module (local-only localhost binding)." ON)
option(NETSENTINEL_ENABLE_SPDLOG "Use spdlog for structured logging if available." OFF)
option(NETSENTINEL_ENABLE_JSON "Use nlohmann_json for serialization helpers if available." OFF)
option(NETSENTINEL_ENABLE_TEST_DEPENDENCIES "Enable optional test framework dependencies if available." ON)
option(NETSENTINEL_BUILD_TESTS "Build NetSentinel11 smoke tests when the tests directory is present." ON)

set(NETSENTINEL_HAS_SQLITE OFF)
set(NETSENTINEL_HAS_SPDLOG OFF)
set(NETSENTINEL_HAS_JSON OFF)
set(NETSENTINEL_HAS_GTEST OFF)

if(NETSENTINEL_ENABLE_SQLITE)
    find_package(SQLite3 QUIET CONFIG)
    if(NOT SQLite3_FOUND AND NOT TARGET SQLite::SQLite3)
        find_package(unofficial-sqlite3 QUIET CONFIG)
    endif()
    if(SQLite3_FOUND OR TARGET SQLite::SQLite3 OR TARGET unofficial::sqlite3::sqlite3)
        set(NETSENTINEL_HAS_SQLITE ON)
        message(STATUS "SQLite dependency found; storage can use persistence.")
    else()
        message(WARNING "SQLite3 not found. Storage will remain in safe stub mode until dependency is installed.")
    endif()
endif()

if(NETSENTINEL_ENABLE_SPDLOG)
    find_package(spdlog QUIET CONFIG)
    if(spdlog_FOUND)
        set(NETSENTINEL_HAS_SPDLOG ON)
        message(STATUS "spdlog dependency found; structured logging available.")
    else()
        message(WARNING "spdlog not found. Falling back to std::cerr/std::cout logging.")
    endif()
endif()

if(NETSENTINEL_ENABLE_JSON)
    find_package(nlohmann_json QUIET CONFIG)
    if(nlohmann_json_FOUND)
        set(NETSENTINEL_HAS_JSON ON)
        message(STATUS "nlohmann_json dependency found.")
    else()
        message(WARNING "nlohmann_json not found. JSON serialization features remain stubbed.")
    endif()
endif()

if(NETSENTINEL_ENABLE_TEST_DEPENDENCIES)
    find_package(GTest QUIET CONFIG)
    if(GTest_FOUND)
        set(NETSENTINEL_HAS_GTEST ON)
        message(STATUS "GoogleTest dependency found.")
    else()
        message(STATUS "GoogleTest not found. Tests will rely on CTest command-output checks only.")
    endif()
endif()

message(STATUS "Build targets: NetSentinel11 C17 core + C++20 app")
message(STATUS "Optional dependencies: SQLite=${NETSENTINEL_ENABLE_SQLITE}, REST=${NETSENTINEL_ENABLE_REST}, spdlog=${NETSENTINEL_ENABLE_SPDLOG}, json=${NETSENTINEL_ENABLE_JSON}")

add_subdirectory(src/netcore_c)
add_subdirectory(src/engine_cpp)
add_subdirectory(src/storage)
add_subdirectory(src/diagnostics)
add_subdirectory(src/security)
add_subdirectory(src/alerts)
add_subdirectory(src/speed_test)
add_subdirectory(src/outage)
add_subdirectory(src/service)
add_subdirectory(src/ui)
add_subdirectory(src/reports)
add_subdirectory(src/api)
add_subdirectory(src/installer)
add_subdirectory(src/bandwidth)
add_subdirectory(src/hardening)
add_subdirectory(src/app)

include(CTest)
if(BUILD_TESTING AND NETSENTINEL_BUILD_TESTS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt")
    add_subdirectory(tests)
elseif(BUILD_TESTING AND NETSENTINEL_BUILD_TESTS)
    message(STATUS "tests/ directory not present; skipping NetSentinel11 smoke tests for this checkout.")
endif()
